--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Zenna Tavares
-  avatar: bio-photo.jpg
+  avatar: zennabw.jpg
   bio: "I'm a Ph.D candidate at MIT.  I think about how to build computer programs that think as humans think."
   email: 
   disqus-shortname: 
