fixed front page and stuff

--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ kramdown:
 owner:
   name: Zenna Tavares
   avatar: zennabw.jpg
-  bio: "I'm a Ph.D candidate at MIT.  I think about how to build computer programs that think as humans think."
-  email: 
+  bio: "I'm a Ph.D candidate at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zenna[at]mit[dot]edu"
+  email: zenna@mit.edu
   disqus-shortname: 
   twitter: #username
   facebook: #username
