--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:
 
 permalink:   /:categories/:title/
 markdown:    kramdown
-highlighter: pygments
+highlighter: rougue
 sass:
   sass_dir: _sass
   style: compressed
