--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   bio: "I'm a postdoctoral researcher at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zenna[at]csail[dot]mit[dot]edu"
   email: zenna@csail.mit.edu
   disqus-shortname: 
-  twitter: #username
+  twitter: zennatavares
   facebook: #username
   google:
     plus: #username
