--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ kramdown:
 owner:
   name: Zenna Tavares
   avatar: zennabw.jpg
-  bio: "I'm a postdoctoral researcher at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zenna[at]csail[dot]mit[dot]edu"
-  email: zenna@csail.mit.edu
+  bio: "I'm a research associate and Innovation Fellow at the Zuckerman Institute and Data Science Institute of Columbia University.  I came here from a Ph.D and postdoc at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zt2297[at]columbia[dot]edu"
+  email: zt2297@columbia.edu
   disqus-shortname: 
   twitter: zennatavares
   facebook: #username
