--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ kramdown:
 owner:
   name: Zenna Tavares
   avatar: zennabw.jpg
-  bio: "I'm an researcher at Columbia University, formerly at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zt2297[at]columbia[dot]edu"
-  email: zt2297@columbia.edu
+  bio: "I'm an researcher at Columbia University, formerly at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zenna[at]basis[dot]ai"
+  email: zenna@basis.ai
   disqus-shortname: 
   twitter: zennatavares
   facebook: #username
