--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 owner:
   name: Zenna Tavares
   avatar: zennabw.jpg
-  bio: "I'm an researcher at Columbia University, formerly at MIT.  I think about how to build computer programs that think as humans think.  You can contact me on zenna[at]basis[dot]ai"
+  bio: "I'm a cofounder and codirector of Basis, formerly at MIT and Columbia.  I think about how to build computer programs that think as humans think.  You can contact me on zenna[at]basis[dot]ai"
   email: zenna@basis.ai
   disqus-shortname: 
   twitter: zennatavares
