--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Zenna's Site
 locale:           en_US
-url:              
+url:              "https://www.zenna.org"
 
 
 # Jekyll configuration
